--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') { exclude group: 'org.junit.vintage', module: 'junit-vintage-engine' }
+	testImplementation("org.junit.jupiter:junit-jupiter-engine:5.5.2")
+	testImplementation("org.junit.platform:junit-platform-runner:1.5.2")
 }
 
 test {
