--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
